--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="address-wrapper">
           <a href="contact.html">
             325 5th street <br />
-            Zapopan, Jal. MX 45180</a
+            Toronto, ON. Canada</a
           >
         </div>
         <div class="contact-icon">
